--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
                   width="360"
                   height="300"
                 />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <p class="overlay-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
 
               <div class="portfolio-name">
                 <h3 class="title-three">Banking App</h3>
@@ -360,12 +360,12 @@
                   width="360"
                   height="300"
                 />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <p class="overlay-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
 
               <div class="portfolio-name">
                 <h3 class="title-three">Cashless Payment</h3>
@@ -380,12 +380,12 @@
                   width="360"
                   height="300"
                 />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <p class="overlay-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
 
               <div class="portfolio-name">
                 <h3 class="title-three">Meditation App</h3>
@@ -400,12 +400,12 @@
                   width="360"
                   height="300"
                 />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <p class="overlay-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
 
               <div class="portfolio-name">
                 <h3 class="title-three">Taxi Service</h3>
@@ -420,12 +420,12 @@
                   width="360"
                   height="300"
                 />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <p class="overlay-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
 
               <div class="portfolio-name">
                 <h3 class="title-three">Screen Illustrations</h3>
@@ -440,12 +440,12 @@
                   width="360"
                   height="300"
                 />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <p class="overlay-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
 
               <div class="portfolio-name">
                 <h3 class="title-three">Online Courses</h3>
