--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     </main>
     <footer class="footer">
       <div class="footer-full">
-        <div class="container footer-left">
+        <div class="container ">
           <a href="./index.html" class="footer-logo layot"
             >Web<span class="white-logo">Studio</span></a
           >
@@ -467,7 +467,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-socials">
+        <div >
           <p class="footer-text">Social media</p>
           <ul class="footer-socials-list">
             <li class="footer-socials-item">
