--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             >Web<span class="studio-logo">Studio</span></a
           >
           <ul class="navigation-list">
-            <li>
+            <li class="hover-move">
               <a href="./index.html" class="navigation-item header-text"
                 >Studio</a
               >
             </li>
-            <li>
+            <li class="hover-move">
               <a href="" class="navigation-item header-text">Portfolio</a>
             </li>
-            <li>
+            <li class="hover-move">
               <a href="" class="navigation-item header-text">Contacts</a>
             </li>
           </ul>
