--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="navigation-list">
             <li>
-              <a href="./index.html" class="navigation-item header-text"
+              <a href="./index.html" class="navigation-item header-text active"
                 >Studio</a
               >
             </li>
