--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     </main>
     <footer class="footer">
       <div class="footer-full">
-        <div class="container ">
+        <div class="container forright">
           <a href="./index.html" class="footer-logo layot"
             >Web<span class="white-logo">Studio</span></a
           >
