--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-inner">
+      <div class="container header-inner ">
         <nav class="header-nav">
-          <a href="./index.html" class="full-logo"
+          <a href="./index.html" class="full-logo "
             >Web<span class="studio-logo">Studio</span></a
           >
           <ul class="navigation-list">
@@ -451,8 +451,9 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-full">
-        <div class="container">
+      <div class="footer-full container">
+        <div>
+          <div class="footer-text-container"></div>
           <a href="./index.html" class="footer-logo layot"
             >Web<span class="white-logo">Studio</span></a
           >
@@ -461,7 +462,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div >
+        <div>
           <p class="footer-text">Social media</p>
           <ul class="footer-socials-list">
             <li class="footer-socials-item">
