--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-inner ">
+      <div class="container header-inner">
         <nav class="header-nav">
-          <a href="./index.html" class="full-logo "
+          <a href="./index.html" class="full-logo"
             >Web<span class="studio-logo">Studio</span></a
           >
           <ul class="navigation-list">
             <li>
-              <a href="./index.html" class="navigation-item header-text active"
+              <a href="./index.html" class="navigation-item header-text"
                 >Studio</a
               >
             </li>
@@ -40,6 +40,8 @@
             </li>
           </ul>
         </nav>
+        <!-- <div > -->
+        <!-- address -->
         <address class="address-item">
           <ul class="address-list">
             <li>
@@ -56,6 +58,7 @@
         </address>
       </div>
     </header>
+    <main>
     <main>
       <!-- !Hero -->
       <section class="hero-section">
@@ -450,7 +453,24 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer ">
+      <div class="container">
+        <div class="footer-text-container">
+<a href="./index.html" class="footer-logo layot"
+          >Web<span class="white-logo">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+        </div>
+        
+      </div>
+    </footer>
+
+
+
+    <!-- <footer class="footer">
       <div class="footer-full container">
         <div>
           <div class="footer-text-container"></div>
@@ -500,6 +520,6 @@
           </ul>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
