--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </address>
       </div>
     </header>
-    <main>
+
     <main>
       <!-- !Hero -->
       <section class="hero-section">
@@ -453,22 +453,58 @@
         </div>
       </section>
     </main>
-    <footer class="footer ">
+    <footer class="footer">
       <div class="container">
-        <div class="footer-text-container">
-<a href="./index.html" class="footer-logo layot"
-          >Web<span class="white-logo">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="wrapper">
+          <div class="footer-text-container">
+            <a href="./index.html" class="footer-logo layot"
+              >Web<span class="white-logo">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="socials-container">
+            <p class="footer-text-social">Social media</p>
+            <ul class="footer-socials-list">
+              <li class="footer-socials-item">
+                <a class="footer-socials-icon" href="#"
+                  ><svg class="icon-footer-fill" width="24" height="24">
+                    <use
+                      href="./images/social-icons.svg#icon-instagram-2"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-socials-item">
+                <a class="footer-socials-icon" href="#"
+                  ><svg class="icon-footer-fill" width="24" height="24">
+                    <use
+                      href="./images/social-icons.svg#icon-twitter-1"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-socials-item">
+                <a class="footer-socials-icon" href="#"
+                  ><svg class="icon-footer-fill" width="24" height="24">
+                    <use
+                      href="./images/social-icons.svg#icon-facebook-1"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-socials-item">
+                <a class="footer-socials-icon" href="#"
+                  ><svg class="icon-footer-fill" width="24" height="24">
+                    <use
+                      href="./images/social-icons.svg#icon-linkedin-1"
+                    ></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
-        
       </div>
     </footer>
-
-
 
     <!-- <footer class="footer">
       <div class="footer-full container">
