--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="wrapper">
+      <!-- <div class=""> -->
+        <div class="container wrapper">
           <div class="footer-text-container">
             <a href="./index.html" class="footer-logo layot"
               >Web<span class="white-logo">Studio</span></a
@@ -503,7 +503,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
     </footer>
 
     <!-- <footer class="footer">
